# rtd

./: .readthedocs.yaml  LICENSE  README.md  setup.cfg
docs/: requirements.txt
docs/source/: conf.py  index.rst  tracks.rst
src/rtd/: __init__.py  xxx.py
