[metadata]
name = rtd
version = 0.0.1 
description = readthedocs.org config test 
long_description = file: README.md
license = BSD-3-Clause
author = Michael Blaß
author_email = mblass@posteo.net
keywords = test, configuration, readthedocs.org, rtd
url = 'https://github.com/ifsm/rtd'
download_url = 'https://github.com/ifsm/rtd'

classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: Implementation :: CPython
	License :: OSI Approved :: BSD License

[options]
zip_safe = False
package_dir =
	=src

include_package_data = False
packages = find_namespace:
python_requires >= '3.7'
install_requires = 
	# numpy
	# apollon	
	

[options.packages.find]
where = src
